--- a/Week2FooBar/Base.lproj/Main.storyboard
+++ b/Week2FooBar/Base.lproj/Main.storyboard
@@ -1,25 +1,213 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="coM-ws-evX">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Root View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="RootViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="0Vz-TY-5Z1">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="cell" textLabel="MG5-O1-x5R" detailTextLabel="ohw-R9-iWD" style="IBUITableViewCellStyleValue1" id="jch-wE-dWy">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jch-wE-dWy" id="rzz-rf-de4">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MG5-O1-x5R">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ohw-R9-iWD">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="8KW-46-DXr" kind="push" id="UWr-Zy-OzX"/>
+                                            <segue destination="Rse-zm-tBL" kind="modal" trigger="accessoryAction" id="R2L-u0-nxU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="UuG-fy-JX9"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="XSR-kX-W3L"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0Vz-TY-5Z1" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="0aS-BY-tE4"/>
+                            <constraint firstItem="0Vz-TY-5Z1" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="LlN-ex-Mo9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0Vz-TY-5Z1" secondAttribute="trailing" constant="-16" id="svR-QS-wCu"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="0Vz-TY-5Z1" secondAttribute="bottom" id="zpB-SD-tud"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="6yq-Ub-DIu"/>
+                    <connections>
+                        <outlet property="tableView" destination="0Vz-TY-5Z1" id="duK-Qm-blm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="766" y="330"/>
+        </scene>
+        <!--Detail-->
+        <scene sceneID="sr9-8c-TlX">
+            <objects>
+                <viewController title="Detail" id="8KW-46-DXr" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y37-98-NVl"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZgD-Xu-Nw0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LlY-QO-6JY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ljl-OI-YMm">
+                                <rect key="frame" x="35" y="349" width="250" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="pEY-ZV-MQk"/>
+                                    <constraint firstAttribute="width" constant="250" id="scB-Z9-uU9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WUF-Mu-gEO">
+                                <rect key="frame" x="35" y="408" width="250" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="QYR-53-lYX"/>
+                                    <constraint firstAttribute="height" constant="21" id="ymq-sB-LjH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AbI-Mx-4GY">
+                                <rect key="frame" x="0.0" y="64" width="320" height="248"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="248" id="z8j-87-gWi"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Learn More" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Fe-wu-0Ll" customClass="LearnMoreLabel">
+                                <rect key="frame" x="60" y="474" width="200" height="21"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="NUa-7M-lgH"/>
+                                    <constraint firstAttribute="height" constant="21" id="daM-Ls-GM6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ljl-OI-YMm" firstAttribute="top" secondItem="AbI-Mx-4GY" secondAttribute="bottom" constant="37" id="DvG-G9-CiR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AbI-Mx-4GY" secondAttribute="trailing" constant="-16" id="Eq9-5P-3Hi"/>
+                            <constraint firstAttribute="centerX" secondItem="8Fe-wu-0Ll" secondAttribute="centerX" id="LNY-51-eU8"/>
+                            <constraint firstAttribute="centerX" secondItem="WUF-Mu-gEO" secondAttribute="centerX" id="T0L-gv-yTw"/>
+                            <constraint firstItem="WUF-Mu-gEO" firstAttribute="top" secondItem="Ljl-OI-YMm" secondAttribute="bottom" constant="8" id="UEN-yC-Pga"/>
+                            <constraint firstItem="AbI-Mx-4GY" firstAttribute="leading" secondItem="LlY-QO-6JY" secondAttribute="leadingMargin" constant="-16" id="VRi-RV-v87"/>
+                            <constraint firstAttribute="centerX" secondItem="Ljl-OI-YMm" secondAttribute="centerX" id="XZr-zw-Pv8"/>
+                            <constraint firstItem="8Fe-wu-0Ll" firstAttribute="top" secondItem="WUF-Mu-gEO" secondAttribute="bottom" constant="45" id="b2B-hd-WT2"/>
+                            <constraint firstItem="AbI-Mx-4GY" firstAttribute="top" secondItem="y37-98-NVl" secondAttribute="bottom" id="bya-NL-1Fa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="nlQ-fI-8UU">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="3eC-aI-9f3">
+                            <connections>
+                                <action selector="onEditButtonTapped:" destination="8KW-46-DXr" id="mj2-XH-G8w"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="AbI-Mx-4GY" id="pBd-xw-KAu"/>
+                        <outlet property="nameLabel" destination="Ljl-OI-YMm" id="fSq-pv-WrR"/>
+                        <outlet property="stateLabel" destination="WUF-Mu-gEO" id="Nkw-Pr-ZzA"/>
+                        <segue destination="Rse-zm-tBL" kind="modal" identifier="learnMoreSegue" id="yFs-ff-tPg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OdA-8F-PIB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="4yw-qu-eQg">
+                    <connections>
+                        <outlet property="delegate" destination="8Fe-wu-0Ll" id="1mV-jE-KI9"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1152" y="330"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ITk-9u-m9t">
+            <objects>
+                <viewController id="Rse-zm-tBL" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jSm-1W-cPe"/>
+                        <viewControllerLayoutGuide type="bottom" id="OQx-pQ-jqw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="po2-Mj-X1U">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2n-5i-JNZ">
+                                <rect key="frame" x="264" y="28" width="40" height="30"/>
+                                <state key="normal" title="Close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SNp-Ue-Eh6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HtY-zh-JBx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="1078"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fcZ-eM-6rJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="coM-ws-evX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9zS-4v-B8b">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="mwm-KK-YJF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WM9-tf-DGb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="234" y="330"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="yFs-ff-tPg"/>
+    </inferredMetricsTieBreakers>
 </document>
